--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,9 +3,9 @@
 #
 
 # Root logger option
-log4j.rootLogger=debug, main
 log4j.appender.main=org.apache.log4j.ConsoleAppender
 log4j.appender.main.layout=org.apache.log4j.PatternLayout
-log4j.appender.main.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss] %5p %c{1}:%L: %m%n
+log4j.appender.main.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}] [%5p] (%c{1}:%L): %m%n
 
+log4j.rootLogger=debug, main
 
