--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <guice.version>3.0</guice.version>
         <log4j.version>1.2.16</log4j.version>
-        <junit.version>3.8.1</junit.version>
+        <junit.version>4.10</junit.version>
         <mockito.version>1.9.0</mockito.version>
     </properties>
 
@@ -33,6 +33,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>11.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
         </dependency>
 
         <!-- Bytecode library -->
